syntax = "proto3";

option java_package = "com.grpc.chat";

//Important to be always same in every environment
package chat;

message UserMessage {
  string body = 1;
}

service ChatService {
  rpc SayHello(UserMessage) returns(UserMessage) {}
}