syntax = "proto3";
option java_package = "com.custom.protobuf";

service user {
  rpc login(LoginRequest) returns (APIResponse);
  rpc logout(Empty) returns (APIResponse);
}

message LoginRequest{
  string username = 1;
  string password = 2;
}

message APIResponse {
  string responseMessage = 1;
  int32 responseCode = 2;
  repeated int32 numbers = 3;
}

message Empty {
}

